Fix map and api paths

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </script>
 
     <!-- Leaflet CSS (cdnjs) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" integrity="sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSA8GVNECkPe3gPbkuoJJPaby9dwp_Ou91tyg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSA8GVNECkPe3gPbkuoJJPaby9dwp_Ou91tyg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- Leaflet JS (cdnjs) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js" integrity="sha512-BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/nyB6E8ZbCJJ8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha512-BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/nyB6E8ZbCJJ8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <!-- Leaflet Heat (cdnjs) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js" integrity="sha512-FyCuo1kT4B5XUEMyOsu6B4Oq+w+vnXQ3X7W/T5uMeXgf+3l62Qx6gC5XRsMO6t5XOA4O59e9XJqS24O5jL6Vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
